# ur10-assistant

./: 12.py  14.py  Dockerfile  README.md  URTest.py  UR_voice_offline.py  URvoice_online.py  del.py  docker-compose.yaml  docker_add  localizer.py  pyproject.toml  test.py  yolo.py
URBasic/: urScriptExt.py
URBasic/URBasic.egg-info/: SOURCES.txt
hoba/: agde.py  check2.py  cv2predproc.py  localizer.py  try,py
old calibr/: camera_calibration.yaml
rlr_april_tags/config/: apriltag.yaml
rlr_april_tags/launch/: detect_apriltags.launch.py
rlr_bringup/: CMakeLists.txt
rlr_bringup/launch/: bringup.launch.py
rlr_bringup/rviz/: hmm.rviz
rlr_camera/calibration/: ost.txt  ost.yaml
rlr_camera/calibration_old/: ost.yaml
rlr_camera/config/: param.yaml
rlr_camera/launch/: camera.launch.py
rlr_cv/: package.xml  setup.cfg  setup.py
rlr_cv/rlr_cv/: april_tag_scale.py  ins_search.py  rlr_cv.py
ros2_voice_ws/config/: robot_params.yaml
ros2_voice_ws/voice_controlled_robot/: package.xml  setup.cfg  setup.py
ros2_voice_ws/voice_controlled_robot/voice_controlled_robot/utils/: robot_utils.py  speech_utils.py  voice_controller.py
scripts/: 12.py  24.py  URTest.py  UR_voice_offline.py  URcontrol.py  URvoice_online.py  set_ur_connection.sh  voice_bib_test.py
scripts/hoba/: check.py  check3.py  localizer.py  nobg.py
ur10e_ros2/: package.xml  setup.cfg  setup.py
ur10e_ros2/srv/: egp_state.srv  tcp_pose.srv
ur10e_ros2/ur10e_ros2/: ur10e_node.py
ur_assist/: CMakeLists.txt  package.xml
ur_assist/config/: UR10e-1.yaml
ur_assist/launch/: bringup.launch.py  move_tools.launch.py  moveit_tools.launch.py  tf.launch.py
ur_assist/rviz/: ur_common.rviz  ur_moveit.rviz
ur_assist/src/: exec_ik_move.cpp  go_to_frame.cpp  go_to_tf.cpp  gripper_control.cpp
ur_assist/srv/: GoToFrame.srv  GripperAction.srv
ur_exec_tools/: package.xml  setup.cfg  setup.py
ur_exec_tools/ur_exec_tools/: go_to_tf.py
voice_controlled_robot/: install_vosk_model.sh  package.xml  setup.py
voice_controlled_robot/config/: tools_config.yaml
voice_controlled_robot/launch/: voice_control.launch.py  voice_robot.launch.py
voice_controlled_robot/voice_controlled_robot/: __init__.py  voice_controller.py
voice_controlled_robot/voice_controlled_robot/nodes/: voice_controller.py
voice_controlled_robot/voice_controlled_robot/resources/URBasic/: setup.py
voice_controlled_robot/voice_controlled_robot/resources/URBasic/URBasic.egg-info/: PKG-INFO
voice_controlled_robot/voice_controlled_robot/utils/: audio_utils.py
