[build-system]
requires = ["setuptools", "wheel"]

[project]
name = "your_robot_vision_system"
version = "0.1.0"
description = "Robot + YOLO + speech control system"
requires-python = ">=3.10"

dependencies = [
    "opencv-python",
    "torch",
    "ultralytics",
    "SpeechRecognition",
    "sounddevice",
    "vosk",
    "ur-basic",
]