<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypelayout="1.0"?>
<package format="3">
  <name>voice_controlled_robot</name>
  <version>1.0.0</version>
  <description>Voice controlled UR robot using ROS2</description>
  <maintainer email="your-email@example.com">Your Name</maintainer>
  <license>Apache-2.0</license>

  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>

  <!-- Добавьте эти зависимости -->
  <exec_depend>python3-sounddevice</exec_depend>
  <exec_depend>python3-vosk</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
